# MCBedrock-ChatRelay

./: .gitignore  README.md  env.example  index.js  package.json  pyproject.toml  start.sh
.github/workflows/: main.yml
BDS-Addon/ChatRelay/scripts/: main.js
NativeBDSAddon/ChatRelay/: manifest.json  variables.example.json
NativeBDSAddon/ChatRelay/scripts/: main.js
Plugins/: discord.js  telegram.js
endstone-Plugin/src/endstone_chatrelay/: __init__.py  chatrelay.py
src/endstone_chatrelay/: __init__.py  chatrelay.py  etc.py
