[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-chatrelay"
version = "1.2.2"
description = "Relays chat to a Discord webhook"
authors = [
    { name = "niko-at-chalupa"}
]
dependencies = [
    "discord-webhook",
    "pillow",
    "ruamel.yaml",
    "endstone",
    "pydantic",
]
[project.entry-points."endstone"]
chatrelay = "endstone_chatrelay:ChatRelay"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_chatrelay"]
