[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-chatrelay"
version = "3.0.0"
description = "Minecraft chat relay to Telegram and Discord"
authors = [{ name = "niko-at-chalupa" }]
dependencies = [
    "ruamel.yaml",
    "endstone",
]

[project.entry-points."endstone"]
chatrelay = "endstone_chatrelay:ChatRelay"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_chatrelay"]
